<resources>
    <string name="app_name">Poseidon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Global messages -->
    <string name="global_error">Une erreur est survenue. Veuillez réessayer.</string>

    <!-- Global button text -->
    <string name="close_button">X</string>

    <!-- Weather conditions -->
    <string name="weather_sun">Soleil</string>
    <string name="weather_cloud">Nuages</string>
    <string name="weather_thunderstorm">Orages</string>
    <string name="weather_wind">Vent</string>
    <string name="weather_storm">Tornade</string>
    <string name="weather_rain">Pluie</string>

    <!--  Alert item example text  -->
    <string name="alert_item_cap_antibes">Cap d\'Antibes</string>

    <!-- Weather condition creator texts -->
    <string name="weather_condition_creator_perimeter">Périmètre : %1$d milles marin</string>
    <string name="weather_condition_creator_real_gps_position">Position GPS Réelle</string>
    <string name="weather_condition_creator_on_map_gps_position">Position sur la carte</string>
    <string name="weather_condition_creator_close_button">X</string>
    <string name="weather_condition_creator_select_gps_position">Position GPS :</string>
    <string name="weather_condition_creator_button_confirm">Confirmer</string>
    <string name="weather_condition_creator_button_cancel">Annuler</string>
    <string name="weather_condition_creator_select_weather_text">Sélectionner la condition météorologique de votre emplacement actuel</string>
    <string name="weather_condition_creator_weather_sent">Condition météorologique ajoutée !</string>
    <string name="weather_condition_creator_no_gps">Votre position GPS est nulle, veuillez la mettre à jour (ouvrez Google Maps) !</string>

    <!-- Weather condition updater texts -->
    <string name="weather_condition_updater_title">Indication météorologique%1$s</string>
    <string name="weather_condition_updater_coordinates">Coordonnées : %1$f, %2$f</string>
    <string name="weather_condition_updater_current_condition">Condition actuelle : %1$s</string>
    <string name="weather_condition_updater_perimeter">Périmètre : %1$d milles marin</string>
    <string name="weather_condition_updater_created_at">Créé le : %1$s</string>
    <string name="weather_condition_updater_last_update">Dernière mise à jour : %1$s</string>
    <string name="weather_condition_updater_added_by">Ajouté par : %1$s</string>
    <string name="weather_condition_updater_finished">Supprimer</string>
    <string name="weather_condition_updater_close">Fermer</string>
    <string name="weather_condition_updater_succefully_deleted">Condition météorologique supprimée !</string>
    <string name="weather_condition_updater_succefully_deleted_definitely">Condition météorologique supprimée définitivement de votre historique !</string>
    <string name="weather_condition_updater_button_information">Si l\'indication météorologique n\'est plus d\'actualité, cliquez sur le bouton \'Supprimer\' afin de la supprimer.</string>
    <string name="weather_condition_updater_button_information_already_finished">Cette indication météorologique est terminé, cliquez sur le bouton \'Supprimer\' afin de la supprimer définitivement de votre historique.</string>
    <string name="weather_condition_updater_edition_title">Modification</string>
    <string name="weather_condition_updater_edition_perimeter">Périmètre : %1$d milles marin</string>
    <string name="weather_condition_updater_logging">Sauvegarde en cours…</string>
    <string name="weather_condition_updater_data_logged">Données sauvegardées !</string>
    <string name="weather_condition_updater_deleting">Suppression</string>

    <!-- Picture fragment -->
    <string name="fragment_picture_take_picture">Prendre une photo</string>
    <string name="fragment_picture_retake_picture">Reprendre</string>
    <string name="fragment_picture_remove_picture">Supprimer</string>
    <string name="fragment_picture_photo_text_indicator">Appuyez sur le bouton ci-dessous pour ajouter une photo de la condition météorologique</string>
    <string name="fragment_picture_photo">Photo :</string>

    <!-- Profile fragment -->
    <string name="fragment_profile_disconnect">Déconnexion</string>
    <string name="fragment_profile_close_button">X</string>
    <string name="fragment_profile_name_example">Julian ZAZIN</string>
    <string name="fragment_profile_nb_events_notifies">%1$s événement notifié</string>
    <string name="fragment_profile_nb_events_notifies_plural">%1$s événements notifiés</string>
    <string name="fragment_profile_history_title">Historique</string>
    <string name="fragment_profile_history_columns_type">Type</string>
    <string name="fragment_profile_history_columns_date">Date</string>
    <string name="fragment_profile_history_columns_coordinates">Coordonnées</string>
    <string name="fragment_profile_history_columns_duration">Durée</string>
    <string name="fragment_profile_history_columns_locate">Localiser</string>
    <string name="fragment_profile_history_aucun_events_notifies">Aucun événement notifié…</string>

    <!-- Profile history item -->
    <string name="profile_history_item_sample_date">08/05/2023</string>
    <string name="profile_history_item_finished">Terminé</string>
    <string name="profile_history_item_ongoing">En cours…</string>
    <string name="profile_history_item_sample_coordinate">5.432453</string>
    <string name="profile_history_item_sample_duration">21 heures</string>
    <string name="connection_google">Connectez-vous avec Google !</string>
    <string name="bouton_quitter">X</string>

    <!-- Fragment History item -->
    <string name="fragment_history_perimdapp">Périmètre appliqué :</string>
    <string name="fragment_history_coordulieu">Coordonées du lieu :</string>
    <string name="fragment_history_coorValue">42.0696969 , 6.942069</string>
    <string name="fragment_history_histordulieu">Historique du lieu</string>
    <string name="fragment_history_hisoriclistlabel">Historique :</string>
    <string name="image_meteo">Image météo</string>

    <!-- Activity main item -->
    <string name="activity_main_coordonnees">%1$s, %2$s</string>

    <!-- Fragment Login -->
    <string name="fragment_login_demo_login_button">Compte Démo</string>
    <string name="fragment_login_demo_account_title">Compte de démonstration</string>
    <string name="fragment_login_google_login_title">Connectez-vous avec Google !</string>
    <string name="fragment_login_close_button">X</string>

    <!-- Fragment alerts menu text -->
    <string name="fragment_alerts_menu_title_alerts">Vos alertes :</string>
    <string name="fragment_alerts_menu_add_alert">Ajouter une alerte</string>

    <!-- Fragment edit alert text -->
    <string name="fragment_edit_alert_title_new_alert">Nouvelle alerte</string>
    <string name="fragment_edit_alert_title_alert_name">Nom de l\'alerte :</string>
    <string name="fragment_edit_alert_title_to_alert">M\'alerter de :</string>
    <string name="fragment_edit_alert_title_description">Description :</string>
    <string name="fragment_edit_alert_title_place">Zone :</string>

    <!-- Fragment recherche text -->
    <string name="fragement_recherche_rechercher">Rechercher…</string>
    <string name="fragement_recherche_filtrer">Filtrer</string>

</resources>