<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center"
    android:background="@drawable/popup"
    tools:context=".WeatherConditionCreatorFragment">

    <!-- Bouton de déconnexion -->
    <Button
        android:id="@+id/btnDeconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_disconnect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/close_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_close_button"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        />

    <!-- Image de profil -->
    <ImageView
        android:id="@+id/imgProfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profil"
        app:layout_constraintTop_toBottomOf="@id/btnDeconnexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <!-- Nom du profil -->
    <TextView
        android:id="@+id/txtNomProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/fragment_profile_name_example"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/imgProfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <!-- Texte avec nombre et "événements notifiés" -->
    <TextView
        android:id="@+id/txtNombreEvenements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/fragment_profile_nb_events_notifies"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtNomProfil"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        />

    <!-- Bannière "HISTORIQUE" -->
    <TextView
        android:id="@+id/txtHistorique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_history_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@drawable/fragment_profile_history_title"
        app:layout_constraintTop_toBottomOf="@id/txtNomProfil"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        />

    <!-- Colonnes -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtHistorique"
        />

    <TextView
        android:id="@+id/history_column_type"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_history_columns_type"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtHistorique"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/history_column_date"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_history_columns_date"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/history_column_type"
        app:layout_constraintStart_toEndOf="@id/history_column_type"
        app:layout_constraintEnd_toStartOf="@id/history_column_coordonnees"
        />

    <TextView
        android:id="@+id/history_column_coordonnees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_history_columns_coordinates"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/history_column_type"
        app:layout_constraintStart_toEndOf="@id/history_column_date"
        app:layout_constraintEnd_toStartOf="@id/history_column_duree"
        />

    <TextView
        android:id="@+id/history_column_duree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_history_columns_duration"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/history_column_type"
        app:layout_constraintStart_toEndOf="@id/history_column_coordonnees"
        app:layout_constraintEnd_toStartOf="@id/history_column_locate"
        />

    <TextView
        android:id="@+id/history_column_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_history_columns_locate"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/history_column_type"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/history_column_separator_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/history_column_type"
        />

    <!-- FIN Colonnes -->

    <!-- Historique -->
    <TextView
        android:id="@+id/history_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/history_column_separator_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragment_profile_history_aucun_events_notifies"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:visibility="visible"/>


    <ListView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:layout_constraintTop_toBottomOf="@id/history_column_separator_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="7dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
