<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="@drawable/popup"
    android:id="@+id/weather_condition_creator_fragment_layout"
    tools:context=".fragments.weathercondition.WeatherConditionCreatorFragment" >

    <TextView
        android:id="@+id/label_select_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/weather_condition_creator_select_weather_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_weather_condition_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_select_weather" />

    <TextView
        android:id="@+id/range_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weather_condition_creator_perimeter"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_weather_condition_list" />

    <SeekBar
        android:id="@+id/range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/range_value"
        />

    <FrameLayout
        android:id="@+id/fragment_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/range"
        app:layout_constraintBottom_toTopOf="@id/select_gps_postion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/select_gps_postion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weather_condition_creator_select_gps_position"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/radio_group_select_gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_picture" />

    <RadioGroup
        android:id="@+id/radio_group_select_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/select_gps_postion"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/radio_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_condition_creator_real_gps_position"
            android:layout_marginEnd="10dp"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radio_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_condition_creator_on_map_gps_position"
            android:layout_marginStart="10dp"
            />

    </RadioGroup>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/radio_group_select_gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/confirm"
            android:text="@string/weather_condition_creator_button_confirm"
            android:backgroundTint="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/cancel"
            android:text="@string/weather_condition_creator_button_cancel"
            android:backgroundTint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/close_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_button"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>