<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/popup"
    tools:context=".fragments.weathercondition.updater.WeatherConditionUpdaterFragment"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_coordinates"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_current_condition"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/coordinates"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/perimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_perimeter"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/condition"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_created_at"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/perimeter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_last_update"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/created_at"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/added_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_added_by"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/last_update"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edition_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/added_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <View
            android:id="@+id/edition_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/edition_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_condition_updater_edition_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/edition_divider"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:id="@+id/edition_save_ingoing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/edition_title"
            app:layout_constraintTop_toTopOf="@id/edition_title"
            app:layout_constraintBottom_toBottomOf="@id/edition_title"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone"
            >

            <ProgressBar
                android:layout_marginStart="5dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:indeterminateTint="@color/grey"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sauvegarde en cours..."
                android:textSize="12sp"
                android:textColor="@color/grey"
                android:layout_marginStart="2dp"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/edition_save_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/edition_title"
            app:layout_constraintTop_toTopOf="@id/edition_title"
            app:layout_constraintBottom_toBottomOf="@id/edition_title"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone"
            >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/eo_circle_green_checkmark"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Données sauvegardées !"
                android:textSize="12sp"
                android:textColor="@color/green"
                android:layout_marginStart="2dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/edition_range_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_condition_updater_edition_perimeter"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/edition_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            />

        <SeekBar
            android:id="@+id/edition_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edition_range_value"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/deletion_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edition_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/deletion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Suppression"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/deletion_divider"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/click_if_is_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition_updater_button_information"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/deletion_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/click_if_is_finished"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >


        <Button
            android:id="@+id/finished"
            android:text="@string/weather_condition_updater_finished"
            android:backgroundTint="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/close"
            android:text="@string/weather_condition_updater_close"
            android:backgroundTint="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/close_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
